--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
-before_install:
- - sudo apt-get update -qq
- - sudo apt-get install -qq python2.7
-
 language: python
+
 python:
-    - 2.7
+  - 2.7
+
+install:
+  - pip install codecov
+
+script:
+  - coverage run tests.py
+
+after_success:
+  - codecov
+
 notifications:
     slack: gatech-sci:epqI4DY40VX4DaTdyUemo1ld
