--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,44 @@
-Flask
-Redis
-tensorflow
-numpy
-opencv-python
-tensorflow-gpu
+bleach==1.5.0
+chardet==2.3.0
+click==6.7
+command-not-found==0.3
+cryptography==1.7.1
+distro-info===0.14build1
+Flask==0.12.2
+html5lib==0.9999999
+idna==2.2
+itsdangerous==0.24
+Jinja2==2.9.6
+keyring==10.3.1
+keyrings.alt==2.2
+language-selector==0.1
+Markdown==2.6.9
+MarkupSafe==1.0
+numpy==1.13.3
+opencv-python==3.3.0.10
+protobuf==3.4.0
+psutil==5.0.1
+pyasn1==0.1.9
+pycrypto==2.6.1
+pycups==1.9.73
+pygobject==3.22.0
+python-apt==1.4.0b2
+python-debian==0.1.30
+pyxdg==0.25
+PyYAML==3.12
+redis==2.10.6
+requests==2.10.0
+screen-resolution-extra==0.0.0
+SecretStorage==2.3.1
+six==1.11.0
+ssh-import-id==5.6
+system-service==0.3
+systemd-python==233
+tensorflow==1.3.0
+tensorflow-gpu==1.3.0
+tensorflow-tensorboard==0.1.8
+ufw==0.35
+unattended-upgrades==0.1
+urllib3==1.15.1
+Werkzeug==0.12.2
+xkit==0.0.0
